--- a/main.html
+++ b/main.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html>
@@ -7,6 +8,19 @@
 </head>
 
 <body>
+	<h2>Items I buy with my Salary</h2>
+	<ol>
+		<li data-ns-test="shoppingList">Oneplus 13T</li>
+		<li data-ns-test="shoppingList">Hyundai i20 </li>
+		<li  data-ns-test="shoppingList">Laptop</li>
+	</ol>
+
+<h2>Places I'd visit after I get a Job</h2>
+
+	<li  data-ns-test="shoppingList">Thailand</li>
+	<li  data-ns-test="shoppingList">Switzerland</li>
+	<li  data-ns-test="shoppingList">Singapore</li>
+	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
