--- a/main.html
+++ b/main.html
@@ -17,9 +17,9 @@
 
 <h2>Places I'd visit after I get a Job</h2>
 
-	<li  data-ns-test="shoppingList">Thailand</li>
-	<li  data-ns-test="shoppingList">Switzerland</li>
-	<li  data-ns-test="shoppingList">Singapore</li>
+	<li  data-ns-test="holidayList">Thailand</li>
+	<li  data-ns-test="holidayList">Switzerland</li>
+	<li  data-ns-test="holidayList">Singapore</li>
 	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
